# demoflight

./: .containerignore  .dockerignore  .gitignore  Cargo.toml  Containerfile  README.md  build.rs
.github/workflows/: ci.yml  container.yml
clients/python/: README.md  pyproject.toml
clients/python/src/demoflight/: __init__.py  _client.py  _proto.py  _query.py  _session.py
clients/python/tests/: conftest.py  test_client.py
examples/: README.md  combat_detection.py  hero_positions.py  lane_control.py  multi_query.py  objectives.py  player_stats.py  troopers.py
proto/demoflight/v1/: demoflight.proto
scripts/: e2e_test.py  early_termination_test.py  multi_query_test.py
src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  server.rs
src/actions/: mod.rs  register_source.rs
src/commands/: mod.rs  router.rs
src/flight_sql/: get_schema.rs  get_sql_info.rs  get_tables.rs  mod.rs
src/proto/: demoflight.v1.rs
src/session/: jwt.rs  manager.rs  mod.rs  state.rs
src/source/: gotv.rs  mod.rs  validation.rs
src/tickets/: encoding.rs  mod.rs
tests/: integration_test.rs
